<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    tools:context=".DetailActivity">

    <ImageView
        android:id="@+id/detail_imageView"
        android:layout_width="200dp"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_height="200dp"/>

    <TextView
        android:id="@+id/detail_title"
        android:layout_width="wrap_content"
        android:text="@string/detailTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="26sp"
        android:textColor="@color/white"
        android:background="@color/red"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="65dp"
        android:paddingVertical="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_imageView"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/detail_year"
        app:layout_constraintTop_toBottomOf="@+id/detail_title"
        android:paddingHorizontal="65dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingVertical="30dp"
        android:textSize="26sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:background="@color/red"
        android:text="@string/detailYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/detail_memory"
        app:layout_constraintTop_toBottomOf="@+id/detail_year"
        android:paddingHorizontal="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingVertical="30dp"
        android:textSize="26sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:background="@color/red"
        android:text="@string/detailMemory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/detail_sum"
        app:layout_constraintTop_toBottomOf="@+id/detail_memory"
        android:paddingHorizontal="65dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingVertical="30dp"
        android:textSize="26dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:background="@color/red"
        android:text="@string/detailSum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    
</androidx.constraintlayout.widget.ConstraintLayout>